test/mock/plugins/invalid/invalid-error-method.js
module.exports = {
  service: 'lambda',
  methods: {
    foo: {
      error: true,
    },
  },
}
